# tiny-ddpm

./: README.md  pyproject.toml
src/simple_ddpm/: model.py  sample.py  train.py
src/tiny_ddpm/: model.py  sample.py  train.py
